Updated by mdAutofix.py

--- a/c-legacy-releases/2023/06072023.md
+++ b/c-legacy-releases/2023/06072023.md
@@ -54,7 +54,7 @@ ht-degree: 99%
 * [[!DNL Creative Cloud for enterprise]](#creative-cloud)
 * [Digital Experience 藍圖](#blueprints)
 
-## ![圖示](/assets/experience-league.png)[!DNL Experience League]活動與最新訊息 {#events}
+## ![圖示](/assets/experience-league.png) [!DNL Experience League]活動與最新訊息 {#events}
 
 了解 Experience League 上的精彩活動。 若要向 Adobe 產品專家學習、與之互動或獲得解答，這是您絕佳的選擇！
 
@@ -102,7 +102,7 @@ ht-degree: 99%
 
 發行版本：**2023 年 5 月 25 日**
 
-* 在[!DNL Experience Cloud]**[!UICONTROL 說明]**&#x200B;選單中，內容搜尋已更新為在 [Experience League](https://experienceleague.adobe.com/#home) 搜尋結果中按應用程式篩選。
+* 在[!DNL Experience Cloud]&#x200B;**[!UICONTROL 說明]**&#x200B;選單中，內容搜尋已更新為在 [Experience League](https://experienceleague.adobe.com/#home) 搜尋結果中按應用程式篩選。
 
 有關 Experience Cloud 介面常用元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html) (包含[!UICONTROL 客戶屬性], [!DNL Experience Cloud Assets]和[!UICONTROL 客群])。
 
@@ -180,7 +180,7 @@ New videos, tutorials, or courses published for Adobe [!DNL Real-Time Customer D
 | 2023 年 6 月 | [使用[!UICONTROL 計算量度]，讓您的資料分析提升到全新層次](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/components/calculated-metrics/take-your-data-analysis-to-the-next-level-with-calculated-metrics.html) | 文章 | 了解同業專家如何使用[!UICONTROL 計算量度]在不更改實施方法下建立度量，並使用已收集的資料來幫助回答複雜的業務問題。 |
 | 2023 年 6 月 | [使用 [!UICONTROL Analysis Workspace] 中的文字視覺效果和說明](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/visualizations/more-than-words-using-text-visualizations-and-descriptions.html) | 文章 | 了解同業專家如何使用[!UICONTROL 計算量度]在不更改實施方法下建立度量，並使用已收集的資料來幫助回答複雜的業務問題。 |
 | 2023 年 6 月 | [使用區段來探索 [!UICONTROL Analysis Workspace] 中的全新見解和分析](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/components/segmentation/segmentation-to-discover-new-insights.html) | 文章 | 了解如何使用 [!DNL Adobe Analytics] 中的區段，從您的 [!UICONTROL Analysis Workspace] 視覺效果和自由表單探索全新見解和分析。 |
-| 2023 年 6 月 | [使用[!UICONTROL 同類群組分析 ]了解客戶行為](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/cohort-analysis/use-cohort-analysis-to-understand-customer-behavior.html) | 文章 | 使用[!UICONTROL 同類群組分析]幫助您了解參與度和保留率，並且進而採取行動，例如改善帳戶建立程序並且為高流量月份建立活動。 |
+| 2023 年 6 月 | [使用[!UICONTROL 同類群組分析 &#x200B;]了解客戶行為](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/cohort-analysis/use-cohort-analysis-to-understand-customer-behavior.html) | 文章 | 使用[!UICONTROL 同類群組分析]幫助您了解參與度和保留率，並且進而採取行動，例如改善帳戶建立程序並且為高流量月份建立活動。 |
 | 2023 年 6 月 | [建置客戶歷程區段](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/applying-segments/building-customer-journey-segments.html) | 文章 | 按照此步驟指南內容，在 [!DNL Adobe Analytics] 建立基於行為的客戶歷程區段，並改善您的客戶使用 [!DNL Experience Cloud] 的體驗。 |
 | 2023 年 6 月 | [拋開您的 Excel，換用計算量度](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/metrics/goodbye-excel-hello-calculated-metrics.html) | 文章 | 了解在 [!DNL Adobe Analytics] 中使用[!UICONTROL 計算量度]的好處，以及這些設定如何在本文中為您提供連續、動態的資料視圖。 |
 | 2023 年 6 月 | [發揮 [!UICONTROL Analysis Workspace] 中強大的唯讀共享功能](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/curate-and-share-projects/unlocking-the-power-of-view-only-sharing.html) | 文章 | 了解分享 [!UICONTROL Analysis Workspace] 唯讀項目如何建立可供主管使用的儀表板報告，並附有簡潔的使用者介面和篩選選項。 |
@@ -536,7 +536,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 新功能：
 
-* [!DNL Adobe Journey Optimizer] 五月版本，附有[!UICONTROL 內容實驗]和[!UICONTROL 電子郵件片段 ]。[了解更多...](https://experienceleague.adobe.com/docs/journey-optimizer/using/whats-new/release-notes.html)
+* [!DNL Adobe Journey Optimizer] 五月版本，附有[!UICONTROL 內容實驗]和[!UICONTROL 電子郵件片段 &#x200B;]。[了解更多...](https://experienceleague.adobe.com/docs/journey-optimizer/using/whats-new/release-notes.html)
 
 * [!UICONTROL 決策管理] 五月版本，附[!UICONTROL 個人化的最佳化 AI] 排名模式。[了解更多...](https://experienceleague.adobe.com/docs/journey-optimizer/using/whats-new/release-notes.html)
 
@@ -706,7 +706,7 @@ Last updated: **August 9, 2022**
 
 >[!NOTE]
 >
->**品牌更新：**_Adobe Document Services_&#x200B;現在是 _Adobe Acrobat Services_。請在[這裡](https://blog.developer.adobe.com/adobe-document-services-is-now-adobe-acrobat-services-f8e3e506b7b1)了解相關內容。
+>**品牌更新：**&#x200B;_Adobe Document Services_&#x200B;現在是 _Adobe Acrobat Services_。請在[這裡](https://blog.developer.adobe.com/adobe-document-services-is-now-adobe-acrobat-services-f8e3e506b7b1)了解相關內容。
 
 +++詳細資料
 
