--- a/c-legacy-releases/2024/04172024.md
+++ b/c-legacy-releases/2024/04172024.md
@@ -61,7 +61,7 @@ ht-degree: 99%
 * [Digital Experience 藍圖](#blueprints)
 * [Adobe 產品安全性漏洞](https://helpx.adobe.com/tw/security.html)
 
-## ![圖示](/assets/experience-league.png)[!DNL Experience League]活動和更新 {#events}
+## ![圖示](/assets/experience-league.png) [!DNL Experience League]活動和更新 {#events}
 
 了解 Experience League 上的精彩活動。 這裡是您向 Adobe 產品專家學習、與之互動或獲得解答的最佳場所！
 
@@ -224,7 +224,7 @@ New articles and updates to existing articles for [!DNL Analytics].
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2024 年 4 月 | [新增預測至您的視覺效果中](https://experienceleague.adobe.com/zh-hant/docs/customer-journey-analytics-learn/tutorials/analysis-workspace/visualizations/forecasting) | 影片 | 了解如何將預測數字新增至 Customer Journey Analytics 中的時間序列視覺效果。 |
-| 2024 年 3 月 | [使用者串流時間表分析](https://experienceleague.adobe.com/zh-hant/docs/customer-journey-analytics-learn/tutorials/guided-analysis/user-stream/user-stream-timeline-analysis) | 影片 | 了解 [!UICONTROL  中的]使用者串流[!DNL Adobe Product Analytics]視圖如何幫助您找到體驗模式、講述更好的使用者故事並驗證實作。 |
+| 2024 年 3 月 | [使用者串流時間表分析](https://experienceleague.adobe.com/zh-hant/docs/customer-journey-analytics-learn/tutorials/guided-analysis/user-stream/user-stream-timeline-analysis) | 影片 | 了解 [!UICONTROL &#x200B; 中的]使用者串流[!DNL Adobe Product Analytics]視圖如何幫助您找到體驗模式、講述更好的使用者故事並驗證實作。 |
 | 2024 年 3 月 | [新增預測至您的視覺效果中](https://experienceleague.adobe.com/zh-hant/docs/customer-journey-analytics-learn/tutorials/analysis-workspace/visualizations/forecasting) | 影片 | 了解如何將預測數字新增至 Customer Journey Analytics 中的時間序列視覺效果。 |
 
 {style="table-layout:auto"}
@@ -736,7 +736,7 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 >[!NOTE]
 >
->_[!DNL Adobe Primetime]_現在稱為_[!DNL Adobe Pass]_。在品牌重塑工作完成之前，您可能很快就會在文件中看到這兩個品牌名稱。
+>_[!DNL Adobe Primetime]_&#x200B;現在稱為&#x200B;_[!DNL Adobe Pass]_。在品牌重塑工作完成之前，您可能很快就會在文件中看到這兩個品牌名稱。
 
 請參閱 [Adobe Pass 發行說明](https://experienceleague.adobe.com/zh-hant/docs/pass)以找到特定版本的資訊、系統需求、限制、已修正的問題和已知問題。
 
