--- a/c-legacy-releases/2024/05152024.md
+++ b/c-legacy-releases/2024/05152024.md
@@ -61,7 +61,7 @@ ht-degree: 99%
 * [Digital Experience 藍圖](#blueprints)
 * [Adobe 產品安全性漏洞](https://helpx.adobe.com/tw/security.html)
 
-## ![圖示](/assets/experience-league.png)[!DNL Experience League]活動和更新 {#events}
+## ![圖示](/assets/experience-league.png) [!DNL Experience League]活動和更新 {#events}
 
 了解 Experience League 上的精彩活動。 這裡是您向 Adobe 產品專家學習、與之互動或獲得解答的最佳場所！
 
@@ -408,7 +408,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 | 2024 年 4 月 | [[!DNL Quality Patches Tool (QPT)]](https://experienceleague.adobe.com/zh-hant/docs/commerce-knowledge-base/kb/support-tools/patches/patches-available-in-qpt-tool-overview) | 新文章 | 關於如何套用 [!DNL QPT] 1.1.46、[!DNL QPT] 1.1.47 與 [!DNL QPT] 1.1.48 中可用之修補程式的新文章已發佈，而且可以在其各自區段中找到。 |
 | 2024 年 4 月 | [當搜尋引擎設定為 [!DNL Opensearch]時會回復至 [!DNL Elasticsearch7] ](https://experienceleague.adobe.com/zh-hant/docs/commerce-knowledge-base/kb/troubleshooting/elasticsearch/falling-back-to-elasticsearch7-when-search-engine-set-to-opensearch) | 新文章 | 了解在 Adobe Commerce 中，當搜尋引擎設定為 [!DNL OpenSearch] 而發生 `Falling back to Elasticsearch7` 時的問題解決方法。 |
 | 2024 年 4 月 | [解決在 [!UICONTROL CSP 限制模式]中建立訂單頁面的疑難問題](https://experienceleague.adobe.com/zh-hant/docs/commerce-knowledge-base/kb/troubleshooting/payments/admin-create-order-page-in-csp-restricted-mode) | 新文章 | 了解在[!UICONTROL 管理]側 ([!UICONTROL CSP 限制模式]已&#x200B;*「啟用」*) 建立訂單時 Adobe Commerce 2.4.7 問題的說明和修復，以及在瀏覽器控制台記錄中 &quot;`Refused to execute inline script because it violates the following Content Security Policy directive: "script-src …`&quot; 錯誤訊息的說明和修復。 |
-| 2024 年 4 月 | [解決在 [!UICONTROL CSP 限制模式]中店面結帳頁面的疑難問題](https://experienceleague.adobe.com/zh-hant/docs/commerce-knowledge-base/kb/troubleshooting/payments/storefront-checkout-page-in-csp-restricted-mode) | 新文章 | 了解查看結帳頁面 (在 [!UICONTROL  CSP 限制模式]中) 時 Adob&#x200B;&#x200B;e Commerce 2.4.7 問題的說明和修復，以及瀏覽器控制台記錄中 `Refused to execute inline script because it violates the following Content Security Policy directive: "script-src …` 錯誤訊息的說明和修復。 |
+| 2024 年 4 月 | [解決在 [!UICONTROL CSP 限制模式]中店面結帳頁面的疑難問題](https://experienceleague.adobe.com/zh-hant/docs/commerce-knowledge-base/kb/troubleshooting/payments/storefront-checkout-page-in-csp-restricted-mode) | 新文章 | 了解查看結帳頁面 (在 [!UICONTROL &#x200B; CSP 限制模式]中) 時 Adob&#x200B;&#x200B;e Commerce 2.4.7 問題的說明和修復，以及瀏覽器控制台記錄中 `Refused to execute inline script because it violates the following Content Security Policy directive: "script-src …` 錯誤訊息的說明和修復。 |
 | 2024 年 4 月 | [如何取得並套用安全性修補程式](https://experienceleague.adobe.com/zh-hant/docs/commerce-knowledge-base/kb/how-to/how-to-obtain-and-apply-security-patches) | 新文章 | 了解有關如何取得並套用已發佈的安全性修補程式說明，但有關說明並未提供。 |
 | 2024 年 4 月 | [如何更新雲端帳戶的輪廓](https://experienceleague.adobe.com/zh-hant/docs/commerce-knowledge-base/kb/how-to/how-to-update-the-cloud-account-profile) | 新文章 | 了解關於如何修改雲端帳戶輪廓的步驟。 |
 
