--- a/c-legacy-releases/2024/06122024.md
+++ b/c-legacy-releases/2024/06122024.md
@@ -61,7 +61,7 @@ ht-degree: 99%
 * [Digital Experience 藍圖](#blueprints)
 * [Adobe 產品安全性漏洞](https://helpx.adobe.com/tw/security.html)
 
-## ![圖示](/assets/experience-league.png)[!DNL Experience League]活動和更新 {#events}
+## ![圖示](/assets/experience-league.png) [!DNL Experience League]活動和更新 {#events}
 
 了解 Experience League 上的精彩活動。 這裡是您向 Adobe 產品專家學習、與之互動或獲得解答的最佳場所！
 
@@ -417,7 +417,7 @@ New or updated videos tutorials published for Adobe Campaign.
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|----|----|-----------|
-| 2024 年 5 月 | [傳遞失敗並出現 `Replication not confirmed: schema:'nms:delivery'` 錯誤](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24269) | 新文章 | 了解如何解決以下問題：[!DNL Adobe Campaign Classic] 中傳遞準備程序失敗，出現錯誤：`Replication not confirmed: schema:'nms:delivery'`，使用 [!DNL Campaign] [!UICONTROL  突發倉庫] (若有)。 |
+| 2024 年 5 月 | [傳遞失敗並出現 `Replication not confirmed: schema:'nms:delivery'` 錯誤](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24269) | 新文章 | 了解如何解決以下問題：[!DNL Adobe Campaign Classic] 中傳遞準備程序失敗，出現錯誤：`Replication not confirmed: schema:'nms:delivery'`，使用 [!DNL Campaign] [!UICONTROL &#x200B; 突發倉庫] (若有)。 |
 | 2024 年 5 月 | [生產子網域列在[!UICONTROL 控制面板]的中繼執行個體下](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24167) | 新文章 | 了解以下 [!DNL Adobe Campaign] 問題的解決步驟：生產子網域列在[!UICONTROL 控制面板]的中繼執行個體下。 |
 | 2024 年 5 月 | [ [!DNL SMS]  傳遞狀態之間的差異：[!UICONTROL 已傳送、已傳送至提供者]和[!UICONTROL 行動裝置已接收]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24025) | 新文章 | 了解 [!DNL out-of-the-box] 傳遞狀態文件。 |
 | 2024 年 5 月 | [[!DNL Adobe Campaign Standard]：使用者未從 [!DNL Adobe Campaign] [!UICONTROL 安全群組]中移除](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24286) | 新文章 | 了解如何從 [!DNL ACS]中的工作流程主管群組中移除已停用的使用者。 |
