--- a/c-legacy-releases/2025/05142025.md
+++ b/c-legacy-releases/2025/05142025.md
@@ -96,7 +96,7 @@ ht-degree: 99%
 
 請參閱 [Experience Cloud 介面和管理](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/experience-cloud)指南，並獲得以下方面的協助：
 
-* **新增！**[Experience Cloud 應用程式中的生成式 AI](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/features/generative-ai)
+* **新增！**&#x200B;[Experience Cloud 應用程式中的生成式 AI](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/features/generative-ai)
 * [使用者管理和產品授權](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/administration/admin-console) (Admin Console)
 * [客戶屬性、客群庫和資產](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/services/overview)等
 
@@ -373,7 +373,7 @@ New or updated videos tutorials published for Adobe Campaign.
 | 2025 年 4 月 | [Adobe Campaign 中的追蹤 URL 標記取代正確的 URL](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26309) | 新文章 | 了解如何解決 Adobe Campaign 中追蹤 URL 標記的問題。 |
 | 2025 年 4 月 | [檔案擷取期間無法匯出列舉標籤](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26155) | 新文章 | 了解如何解決 Adobe Campaign 工作流程中列舉標籤無法正確匯出的問題。 |
 | 2025 年 4 月 | [在 Adobe Campaign Standard 中管理內部電子郵件的隔離規則](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26334) | 新文章 | 了解如何解決內部電子郵件被加入隔離表格，導致重要通訊受阻的問題。 |
-| 2025 年 4 月 | [解決 Adobe Campaign Classic 中密碼變更後的  [!DNL Snowflake] [!UICONTROL  資料載入]問題](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26368) | 新文章 | 了解如何解決在更新「**[!UICONTROL 外部帳戶]**」密碼以便進行 Adobe Campaign Classic 的 [!DNL Snowflake] 連線時，新的[!UICONTROL 資料載入]活動發生的問題。 |
+| 2025 年 4 月 | [解決 Adobe Campaign Classic 中密碼變更後的  [!DNL Snowflake] [!UICONTROL &#x200B; 資料載入]問題](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26368) | 新文章 | 了解如何解決在更新「**[!UICONTROL 外部帳戶]**」密碼以便進行 Adobe Campaign Classic 的 [!DNL Snowflake] 連線時，新的[!UICONTROL 資料載入]活動發生的問題。 |
 | 2025 年 4 月 | [無法檢視 Adobe Campaign Classic 資料夾中的搜尋篩選器](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26160) | 新文章 | 了解如何解決 Adobe Campaign Classic Hosted (v7) 中的特定資料夾未顯示搜尋篩選器的問題。 |
 | 2025 年 4 月 | [Adobe Campaign Classic 中電子郵件開信率下降](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26266) | 新文章 | 了解如何解決雖然工作流程或內容未有任何變更，但電子郵件開信率下降的問題。 |
 | 2025 年 4 月 | [無法登入  [!DNL Adobe Campaign Managed Cloud]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26119) | 新文章 | 了解如何解決登入 [!DNL Adobe Campaign Managed Cloud] 時出現錯誤訊息「*未知的驗證模式：交涉」時的問題。* |
@@ -395,7 +395,7 @@ New or updated videos tutorials published for Adobe Campaign.
 
 * 請參閱 [Journey Optimizer 發行說明](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer/using/whats-new/release-notes)取得更新和協助
 
-**注意：**[Journey Optimizer for B2B Edition](#journey-optimizer-b2b-edition) 是一款單獨的產品。
+**注意：**&#x200B;[Journey Optimizer for B2B Edition](#journey-optimizer-b2b-edition) 是一款單獨的產品。
 
 ### [!DNL Journey Optimizer] 最新教學課程 {#tutorials-ajo}
 
