--- a/c-legacy-releases/2022/01192022.md
+++ b/c-legacy-releases/2022/01192022.md
@@ -232,8 +232,8 @@ Adobe 建議您造訪 [Experience Manager 版本更新與藍圖](https://experie
 
   觀看 [2021 年 12 月發佈概觀影片](https://video.tv.adobe.com/v/339278)，了解 2021.11.0 (2021 年 11 月) 版本新增功能摘要。
 
-   * [](https://video.tv.adobe.com/v/338253)2021 年 10 月版本概觀 新功能影片。
-   * [](https://video.tv.adobe.com/v/337381)2021 年 9 月版本概觀 新功能影片。
+   * [&#128279;](https://video.tv.adobe.com/v/338253)2021 年 10 月版本概觀 新功能影片。
+   * [&#128279;](https://video.tv.adobe.com/v/337381)2021 年 9 月版本概觀 新功能影片。
 
    * **Experience Manager Assets as a Cloud Service**
 
