--- a/c-legacy-releases/2023/07122023.md
+++ b/c-legacy-releases/2023/07122023.md
@@ -55,7 +55,7 @@ ht-degree: 99%
 * [客戶資料管理 - 對話](#voices)
 * [數位體驗藍圖](#blueprints)
 
-## ![圖示](/assets/experience-league.png)[!DNL Experience League]活動與最新訊息 {#events}
+## ![圖示](/assets/experience-league.png) [!DNL Experience League]活動與最新訊息 {#events}
 
 了解 Experience League 上的精彩活動。 這裡是您向 Adobe 產品專家學習、與之互動或獲得解答的最佳場所！
 
@@ -379,7 +379,7 @@ _錯誤修正_
 
 ### 社群
 
-**網路研討會影片：**_掌握 Experience Manager 認證的藝術：做好準備、一切就緒、獲得認證！_
+**網路研討會影片：**&#x200B;_掌握 Experience Manager 認證的藝術：做好準備、一切就緒、獲得認證！_
 
 為了確保每個人都能存取網絡研討會期間的共用重要內容，我們很樂意為您提供影片。您可以在自己方便的時候，到網站瀏覽 AEM 社區對話串並觀看影片內容：[ Adobe Experience Manager Sites 及更多](https://adobe.ly/3p2CmbA)
 
