Updated by mdLocalizeVideoLinks.py

--- a/c-legacy-releases/2021/08192021.md
+++ b/c-legacy-releases/2021/08192021.md
@@ -298,7 +298,7 @@ Adobe 建議您造訪 [Experience Manager 版本更新與藍圖](https://experie
 | 2021 年 8 月 | [Adobe Asset Link 3.0](https://experienceleague.adobe.com/docs/experience-manager-learn/assets/creative-workflows/adobe-asset-link.html?lang=zh-Hant) | 影片 | [!UICONTROL 適用於企業的 Adobe Creative Cloud 的] Asset Link 擴充功能加強在 Creative Cloud 應用程式中搜尋和瀏覽、排序、預覽、上傳資產、取出、修改、存回和檢視 Experience Manager 資產的中繼資料的功能。 |
 | 2021 年 8 月 | [Assets Essentials](https://experienceleague.adobe.com/docs/experience-manager-learn/assets-essentials/basics/managing.html?lang=zh-Hant) | 影片 | 了解 Asset Essentials，包括資料夾結構和基本操作，例如移動、複製和重新命名。新影片也包括如何[使用資產](https://experienceleague.adobe.com/docs/experience-manager-learn/assets-essentials/basics/using.html?lang=zh-Hant)、[建立內容](https://experienceleague.adobe.com/docs/experience-manager-learn/assets-essentials/basics/creating.html?lang=zh-Hant)，以及使用評論、註解和工作在資產管理上[共同作業](https://experienceleague.adobe.com/docs/experience-manager-learn/assets-essentials/basics/creating.html?lang=zh-Hant)。 |
 | 2021 年 8 月 | [Assets Essentials](https://experienceleague.adobe.com/docs/experience-manager-learn/assets-essentials/basics/using.html?lang=zh-Hant) | 影片 | 了解如何篩選、搜尋和下載 Assets Essentials 中的資產。 |
-| 2021 年 8 月 | [Pipeline 概觀 - 導覽指南](https://video.tv.adobe.com/v/335668) | 影片 | 取得 AEM as a Cloud Service 的 [!UICONTROL Cloud Manager Pipeline] 的概觀。 |
+| 2021 年 8 月 | [Pipeline 概觀 - 導覽指南](https://video.tv.adobe.com/v/3438631?captions=chi_hant) | 影片 | 取得 AEM as a Cloud Service 的 [!UICONTROL Cloud Manager Pipeline] 的概觀。 |
 | 2021 年 8 月 | [設定並執行您的 Pipeline - 導覽指南](https://video.tv.adobe.com/v/335667) | 影片 | 了解如何設定並執行您的 Pipeline。 |
 
 {style="table-layout:auto"}
