Updated by AutoLocalizeURLs.py

--- a/c-legacy-releases/2022/09072022.md
+++ b/c-legacy-releases/2022/09072022.md
@@ -496,8 +496,8 @@ Last updated: **August 9, 2022**
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2022 年 9 月 | [使用Adobe Fonts解決字型焦慮](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/assets/TamingTypeAnxiety.pdf) | PDF | 在這個動手教學課程中了解 Adobe Fonts 的運作方式。 |
-| 2022 年 9 月 | [內容創作者適用的 Adobe Acrobat](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/assets/AcrobatforContentCreators.pdf) | PDF | 作為內容創作者，您可能需要產生 PDF，然後定期在 Adobe Acrobat 中查看這些 PDF 檔案。但是，Acrobat 中還包括許多有助於簡化傳統創意工作流程的工具。學習兩個專門的工具：「[!UICONTROL 與他人共用]」和「[!UICONTROL 保護]」。 |
+| 2022 年 9 月 | [使用Adobe Fonts解決字型焦慮](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/assets/TamingTypeAnxiety.pdf?lang=zh-Hant) | PDF | 在這個動手教學課程中了解 Adobe Fonts 的運作方式。 |
+| 2022 年 9 月 | [內容創作者適用的 Adobe Acrobat](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/assets/AcrobatforContentCreators.pdf?lang=zh-Hant) | PDF | 作為內容創作者，您可能需要產生 PDF，然後定期在 Adobe Acrobat 中查看這些 PDF 檔案。但是，Acrobat 中還包括許多有助於簡化傳統創意工作流程的工具。學習兩個專門的工具：「[!UICONTROL 與他人共用]」和「[!UICONTROL 保護]」。 |
 
 {style="table-layout:auto"}
 
