Updated by AutoLocalizeURLs.py

--- a/c-legacy-releases/2023/06072023.md
+++ b/c-legacy-releases/2023/06072023.md
@@ -549,7 +549,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 6 月 | [建立 AI 模型](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/decision-management/create-ai-models.html?lang=zh-Hant) | 影片 | 了解如何建立 [!UICONTROL Offer Decisioning] 的 AI 模式，以及如何將其應用在決策中。 |
-| 2023 年 6 月 | [設定電子郵件的內容實驗](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/email-channel/content-experiments-for-emails.html) | 影片 | 了解如何設定內容實驗以進行 A/B 測試並探索電子郵件內容，以最佳方式推動您的業務目標。 |
+| 2023 年 6 月 | [設定電子郵件的內容實驗](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/email-channel/content-experiments-for-emails.html?lang=zh-Hant) | 影片 | 了解如何設定內容實驗以進行 A/B 測試並探索電子郵件內容，以最佳方式推動您的業務目標。 |
 | 2023 年 6 月 | [設定應用程式內訊息的內容實驗](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/in-app-channel/content-experiments-for-in-app-messages.html?lang=zh-Hant) | 影片 | 瞭解如何設定和分析 A/B 測試應用程式內訊息的內容實驗。 |
 | 2023 年 6 月 | [設定電子郵件頻道](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/configuration/channel-configuration/set-up-email-channel.html?lang=zh-Hant) | 影片 | 瞭解如何建立訊息預設集、如何使用這些預設集，以及如何委派子網域和建立 IP 池。 |
 
